made style changes to fix verify and delete buttons placement on narrower screens, footer overflow, and reviewcard detail overflow, bumped up breakpoint to 500px

--- a/site/src/component/Review/ReviewCard.scss
+++ b/site/src/component/Review/ReviewCard.scss
@@ -33,12 +33,12 @@
   .edit-buttons {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     margin-right: -8px;
     align-items: center;
-    height: 24px;
   }
 
-  @media (max-width: 460px) {
+  @media (max-width: 500px) {
     flex-direction: column;
     gap: 10px;
   }
@@ -52,6 +52,7 @@
 .reviewcard-footer {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin-top: auto;
   color: var(--text-secondary);
@@ -105,6 +106,7 @@
 
 .reviewcard-info {
   width: 100%;
+  min-width: 0;
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -227,6 +229,7 @@
   border: none;
   background-color: transparent;
   text-decoration: underline;
+  padding: 0;
 }
 .add-report-button:hover {
   color: var(--text);
